Progress Bar Fix!!

--- a/php.ini
+++ b/php.ini
@@ -1,4 +1,5 @@
-upload_max_filesize = 2G
-post_max_size = 2G
-memory_limit = 512M
-max_execution_time = 300
+upload_max_filesize = 5G
+post_max_size = 5G
+memory_limit = 256M
+max_input_time = 1800
+max_execution_time = 1800
