Items and Breadcrumbs Button Changes!!

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "show_hidden_files": false,
     "default_sort": "name_asc",
-    "theme": "light",
+    "theme": "dark",
     "type_grouping": false,
     "timezone": "Asia\/Jakarta"
 }
